snapshots/truth__resolve__tests__local_shadows_outer_const.snap
---
source: src/resolve/tests.rs
expression: "resolve_reformat::<ast::Block>(r#\"{\n    const int a = 3;    // should be a_0\n    {\n        int b = a * a;  // should be a_0 * a_0\n        int a = 4;      // should be a_1\n        int c = a * a;  // should be a_1 * a_1\n    }\n}\"#).trim()"
---
{
    const int a_0 = 3;
    {
        int b_0 = (a_0 * a_0);
        int a_1 = 4;
        int c_0 = (a_1 * a_1);
    }
}
