snapshots/truth__resolve__tests__param_redefinition.snap
---
source: src/resolve/tests.rs
expression: "resolve_expect_err::<ast::Block>(r#\"{\n    void foo(int a, int b, float a) {  // should fail at second `a`\n    }\n}\"#,\n                                 \"redefinition\").trim()"
---
error: redefinition of parameter 'a'
  ┌─ <input>:2:34
  │
2 │     void foo(int a, int b, float a) {  // should fail at second `a`
  │                  -               ^ redefinition of parameter
  │                  │                
  │                  originally defined here
