snapshots/truth__resolve__tests__shadow_reg_alias.snap
---
source: src/resolve.rs
expression: "resolve_reformat::<ast::Block>(r#\"{\n        ins_21(A, X);\n        if (true) {\n            float A = 4.0;  // should be different `A`\n            float b = A;\n        }\n        ins_21(A, X);  // should be original `A`\n    }\"#).trim()"
---
{
    ins_21(A_0, X_0);
    if (1) {
        float A_1 = 4.0;
        float b_0 = A_1;
    }
    ins_21(A_0, X_0);
}
